war/static/styles/main.css
/* ... */
div.ratingDot.full.r2 {
	background-image: url("../images/rating_dot_2.png");
}
div.ratingDot.full.r3 {
	background-image: url("../images/rating_dot_3.png");
}
div.ratingDot.full.r4 {
	background-image: url("../images/rating_dot_4.png");
}
div.ratingDot.full.r5 {
	background-image: url("../images/rating_dot_5.png");
}
.labelEasy, .labelHard {
	font-weight: bold;
	line-height: 24px;
}
textarea.ratingComment {
	width: 50vw;
	height: 15vh;
	min-width: 200px;
	min-height: 100px;
}

div.unitTestResult {
	width: 1.5em;
	height: 1.5em;
	float: left;
	margin-right: 2px;
	border-style: solid;
	border-width: 2px;
	border-radius: 4px;
	cursor: pointer;
}

div.search-box {
	width: 150px;
	float: right;
	display: inline-block;
	margin-right: 40px;
}
div.search-box input[type='text'] {
	margin: 1px 0;
	padding: 4px 20px 4px 5px;
	width: 100%;
	height: auto;
	outline: 0;
	border: 1px solid #aaa;
	background: white url("../images/chosen-sprite.png") no-repeat 100% -20px;
	font-size: 1.1em;
	font-family: sans-serif;
	line-height: normal;
	border-radius: 0;
}
.search-node.not-found {
	display:none;
}

table.moduleTable th {
	text-align: left;
}

textarea.console {
	font-family: monospace;
}
div.consolePreview {
	border: 1px solid lightgray;
	box-sizing: border-box;
	font-family: monospace;
	font-size: 13px;
	overflow: auto;
	padding: 0.5em;
	white-space: pre-wrap;
	width: 100%;
}
div.testCase {
	padding: 0.7em;
}
input.code {
	font-family: monospace;
}
span.icon_toggle_plus, div.icon_toggle_plus {
	background-image: url("../images/toggle_plus.png");
	cursor: pointer;
	display: inline-block;
	height: 16px;
	width: 16px;
}
span.icon_toggle_minus, div.icon_toggle_minus {
	background-image: url("../images/toggle_minus.png");
	cursor: pointer;
	display: inline-block;
	height: 16px;
	width: 16px;
}
span.icon_delete, div.icon_delete {
	background-image: url("../images/delete.png");
	cursor: pointer;
	display: inline-block;
	height: 16px;
	width: 16px;
}
span.icon_delete_confirm, div.icon_delete_confirm {
	background-image: url("../images/delete_confirm.png");
	cursor: pointer;
	display: inline-block;
	height: 16px;
	width: 16px;
}
span.icon_undo, div.icon_undo {
	background-image: url("../images/undo.png");
	cursor: pointer;
	display: inline-block;
	height: 16px;
	width: 16px;
}

.hm-table {
	table-layout: fixed;
	overflow: auto;
	width: 100%;
}
.hm-table th {
	text-align: left;
}
.hm-table th, .hm-table td {
	padding: 0.5em;
}
.hm-table td {
	vertical-align: top;
}

span.group-member {
	display: inline-block;
	min-width: 8em;
	margin-left: 2em;
	margin-top: 0.3em;
}

.group-size {
	white-space: nowrap;
}
.no-members {
	font-style: italic;
	color: lightgray;
}

/* conjunction release rule separation */
div.conjunction {
	padding-left: 0.2em;
	font-size: 1.5em;
	text-transform: uppercase;
	margin-top: -0.33em;
	margin-bottom: 0.66em;
}
div.subRule {
	border-left-width: 2px;
	border-left-style: solid;
}
.rule-title {
	font-size: 1.2em;
	font-weight: bold;
}
#deleteMessage {
	font-style: italic;
}

.release-rule li {
	list-style: disc;
	margin-left: 1em;
}
.release-rule ul {
	border-left-width: 2px;
	border-left-style: solid;
 	padding-left: 0.75em;
	margin-top: 0.4em;
}
.release-rule li, .release-rule ul {
	padding-top: 0.25em;
	padding-bottom: 0.25em;
}

.pastaTF,.pastaUnitTestResult {
	font-weight: bold;
	text-transform: uppercase;
}

a.gc-link {
	color: black;
	display: block;
	height: 100%;
	text-decoration: none;
	width: 100%;
}

.handMarkingStudent.didnotsubmit{
	cursor: default;
}
.handMarkingStudent.submittedfalse,
.handMarkingStudent.submittedtrue,
.handMarkingStudent.didnotsubmit {
	border-style: solid;
}
.handMarkingStudent.current{
	border-style: outset;
}
.handMarkingStudent{
	width: 1em;
	height: 1em;
	float: left;
	margin: 1px;
	cursor: pointer;
	border-radius: 50%;
    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
}

pre {
	margin: 0;
	white-space: pre-wrap;
}

div.icon-edit-group {
	background-repeat: no-repeat;
	background-image: url("../images/group-edit.png");
	cursor: pointer;
	height: 32px;
	width: 32px;
}
div.icon-group {
	background-repeat: no-repeat;
	background-image: url("../images/group.png");
	height: 32px;
	width: 32px;
}
span.help {
	background-image: url("../images/help_small.png");
	cursor: pointer;
	display: inline-block;
	height: 16px;
	width: 16px;
}
span.icon_locked, div.icon_locked {
	background-image: url("../images/padlock_closed.png");
	display: inline-block;
	height: 16px;
	width: 16px;
}
span.icon_unlocked, div.icon_unlocked {
	background-image: url("../images/padlock_open.png");
	display: inline-block;
	height: 16px;
	width: 16px;
}
span.icon_help, div.icon_help {
	background-image: url("../images/help.png");
	display: inline-block;
	height: 32px;
	width: 32px;
}


input[type=checkbox].custom-check {
	display:none;
}
input[type=checkbox].custom-check + label,
input[type=checkbox].custom-check + input[type=hidden] + label { 
	background-image: url("../images/check_box_unchecked.png");
	height: 32px;
	width: 32px;
	display:inline-block;
	padding: 0 0 0 0px;
}
input[type=checkbox].custom-check + label:active,
input[type=checkbox].custom-check + input[type=hidden] + label:active { 
	background-image: url("../images/check_box_unchecked_pressed.png");
}
input[type=checkbox]:checked.custom-check + label,
input[type=checkbox]:checked.custom-check + input[type=hidden] + label {
	background-image: url("../images/check_box_checked.png");
}
input[type=checkbox]:checked.custom-check + label:active,
input[type=checkbox]:checked.custom-check + input[type=hidden] + label:active {
	background-image: url("../images/check_box_checked_pressed.png");
}

table.moduleTable tr.lastSelected td {
	border-bottom: 2px dotted gray;
}

table.alignCellsTop td, table.alignCellsTop th {
	vertical-align: top;
}

.largeOutputBox {
	width: 60vw;
	height: 50vh;
	overflow: auto;
}

span.expanded-icon {
	font-size: 1.5em;
}
/* ... */

